chore: regen spec
